--- a/Layouts/src/sample/sample.fxml
+++ b/Layouts/src/sample/sample.fxml
@@ -1,21 +1,25 @@
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
-
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10"
-          gridLinesVisible="true">
-    
-<!--    <columnConstraints>-->
-<!--        <ColumnConstraints percentWidth="50.0"/>-->
-<!--        <ColumnConstraints percentWidth="50.0"/>-->
-<!--    </columnConstraints>-->
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.BorderPane?>
 
-    <Button text="Button One" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-    <Button text="Button Two" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
-    <Button text="Button Three" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-    <Button text="Really Long Button Four" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
-    <Button text="Button Five" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-</GridPane>
+<?import javafx.scene.control.Label?>
+<BorderPane fx:controller="sample.Controller" xmlns:fx="http://javafx.com/fxml">
+    <top>
+        <Label text="This label is in the top position" alignment="center"
+               BorderPane.alignment="CENTER"
+            style="-fx-border-color: blue; -fx-border-width:3; -fx-border-style:dashed"/>
+    </top>
+
+    <bottom>
+        <HBox spacing="10" alignment="bottom_right">
+            <padding>
+                <Insets bottom="10" right="10"/>
+            </padding>
+
+            <Button text="Okay" prefWidth="90"/>
+            <Button text="Cancel" prefWidth="90"/>
+            <Button text="Help" prefWidth="90"/>
+        </HBox>
+    </bottom>
+</BorderPane>
