--- a/JavaFXApplication/src/sample/styles.css
+++ b/JavaFXApplication/src/sample/styles.css
@@ -1,12 +1,5 @@
 
-#gridpane{
-       -fx-background-color: #2A0033;
-}
-
-.button {
-    -fx-background-color: #2A0033;
-    -fx-background-insets: 0;
-    -fx-border-color: white;
-    -fx-border-radius: 20;
+#button_three {
+    -fx-background-color: blue;
     -fx-text-fill: white;
 }
