--- a/MyContacts/src/sample/main.fxml
+++ b/MyContacts/src/sample/main.fxml
@@ -15,6 +15,9 @@
                     <items>
                         <MenuItem text="Add.." onAction="#showAddContactDialog"/>
                     </items>
+                    <items>
+                        <MenuItem text="Edit.." onAction="#showEditContactDialog"/>
+                    </items>
                 </Menu>
             </menus>
         </MenuBar>
