--- a/MyContacts/src/sample/main.fxml
+++ b/MyContacts/src/sample/main.fxml
@@ -18,6 +18,9 @@
                     <items>
                         <MenuItem text="Edit.." onAction="#showEditContactDialog"/>
                     </items>
+                    <items>
+                        <MenuItem text="Delete.." onAction="#showDeleteAlert"/>
+                    </items>
                 </Menu>
             </menus>
         </MenuBar>
@@ -25,6 +28,9 @@
 
     <center>
         <TableView fx:id="contactsTable">
+            <columnResizePolicy>
+                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+            </columnResizePolicy>
             <columns>
                 <TableColumn text="First Name">
                     <cellValueFactory>
